# enrollment-analytics-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: enrollment_config.yaml
examples/sample_data/: enrollment_metrics.csv  enrollment_snapshot_20241201.csv  enrollment_snapshot_20241202.csv
sql/: enrollment_query.sql
src/: __init__.py  analytics.py  enrollment_tracker.py  visualization.py
tests/: __init__.py  conftest.py  test_analytics.py  test_visualization.py
