[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enrollment-analytics-pipeline"
version = "1.0.0"
description = "Production-ready time-series analytics pipeline for student enrollment tracking"
authors = [
    {name = "Steven Orizaga", email = "steven.orizaga@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["enrollment", "analytics", "time-series", "airflow", "education"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pendulum>=2.1.0",
    "apache-airflow>=2.8.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.6.0",
]

[project.optional-dependencies]
postgres = [
    "apache-airflow-providers-postgres>=5.0.0",
    "psycopg2-binary>=2.9.0",
]
mssql = [
    "apache-airflow-providers-microsoft-mssql>=3.4.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]
visualization = [
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/teeeven/enrollment-analytics-pipeline"
Repository = "https://github.com/teeeven/enrollment-analytics-pipeline.git"
Documentation = "https://github.com/teeeven/enrollment-analytics-pipeline#readme"
"Bug Tracker" = "https://github.com/teeeven/enrollment-analytics-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "--verbose"]